--- a/projectx.html
+++ b/projectx.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-  <title>Bootstrapping Bootstrap! :-)</title>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>My first Portfolio</title>
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <meta name="mobile-web-app-capable" content="yes">
   <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
+
   <body>
+
       <div class="container">
+
         <div class="row">
           <div class="col-md-6">
-            <img class="title-logo" src="img/Catworld.jpg" alt="Catworld Logo HERE">
+            <img class="title-logo" src="img/kitten.svg" alt="The cute catworld Logo" height="150">
           </div>
           <div class="col-md-6 text-capitalize text-right">
-            <h1 class="title-super text-thin">Welcome cat lover!<br>
+            <h1 class="title-super text-thin align-right">Welcome cat lover!<br>
               you are in the right place...</h1>
             <h4 class="title-top">...To learn about the cutest and funniest cats in the world</h4>
           </div>
         </div>
+
         <div class="row">
           <div class="col-md-12">
             <hr>
@@ -29,9 +34,15 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <img src="img/cathome.jpg" class="img-responsive center-block" alt="Homepage Picture" >
+              <picture>
+                 <source media="(min-width: 1200px)" srcset="img/cathome-xl1x.jpg 1x, img/cathome-xl2x.jpg 2x" />
+                 <source media="(min-width: 800px)" srcset="img/cathome-lg1x.jpg 1x, img/cathome-lg2x.jpg 2x" />
+                 <source media="(min-width: 640px)" srcset="img/cathome-md1x.jpg 1x, img/cathome-md2x.jpg 2x" />
+                 <img class="img-responsive center-block" src="img/CatHome-sm350.jpg" alt="A kitten picture!">
+              </picture>
           </div>
         </div>
+
         <div class="row">
           <div class="col-md-12">
             <h2 class="text-muted">Featured Breeds</h2>
@@ -39,20 +50,23 @@
         </div>
         <div class="row text-center text-capitalize">
           <div class="col-md-4">
-            <img class="img-responsive center-block" src="http://placekitten.com/353/250" alt="Mashmallow" data-toggle="modal" data-target="#Mashmallow">
+            <img class="img-responsive center-block" src="http://placekitten.com/353/250" alt="American Bobtail Cat" data-toggle="modal" data-target="#Mashmallow">
             <h3>Mashmallow</h3>
-            <p>Wild and playful</p>
+            <p><a href="https://github.com/Brunosky75/Project-Part-1-Start">Wild and playful</a></p>
           </div>
+          
           <div class="col-md-4">
-           <img class="img-responsive center-block" src="http://placekitten.com/352/250" alt="Millie" data-toggle="modal" data-target="#Millie">
+           <img class="img-responsive center-block" src="http://placekitten.com/352/250" alt="American Shorthair" data-toggle="modal" data-target="#Millie">
             <h3>Millie</h3>
-            <p>Delicate and cute</p>
+            <p><a href="https://github.com/Brunosky75/intro-project-html5-hello-world">Delicate and cute</a></p>
           </div>
+          
           <div class="col-md-4">            
-            <img class="img-responsive center-block" src="http://placekitten.com/357/250" alt="Snookie" data-toggle="modal" data-target="#Snookie">
+            <img class="img-responsive center-block" src="http://placekitten.com/357/250" alt="Norvegian Forest Cat" data-toggle="modal" data-target="#Snookie">
             <h3>Snookie</h3>
             <p>Sophisticated listener</p>
           </div>
+
           </div>
                 <div class="row">
           <div class="col-md-12">
@@ -68,8 +82,8 @@
         <h4 class="modal-title" id="Mashmallow">American Bobtail Cat</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="http://placekitten.com/353/250" alt="Mashmallow">
-        While the breed is still developing, breeders say that Bobtails are playful, energetic, and friendly, and possess an uncanny intelligence for Houdini-type escapes from closed rooms and fastened cages. Very people-oriented, they are not above demanding human attention by meowing or commandeering available laps.On the cat activity scale (with, perhaps, the Persian as a serene '1' and the Abyssinian as an animated '10'), the Bobtail rates a 7 or 8 ' fun-loving and frisky but not overactive. 
+        <img class="img-responsive" src="http://placekitten.com/353/250" alt="American Bobtail Cat">
+        To develop this page, I started with the orignal mockup and I customized it. It's based on Bootstrap. I used an SVG file as logo for faster loading time, and the "hero" picture is responsive: if it detects a high DPR display it will show a higher resolution photo.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -85,8 +99,13 @@
         <h4 class="modal-title" id="Millie">American Shorthair</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="http://placekitten.com/352/250" alt="Millie">
-        American Shorthairs are intelligent cats who are interested in their surroundings. They will watch birds, other animals and any outside activity from a window perch. These cats are calm, yet playful and some enjoy sitting in laps. They get along with children, so they make good family pets. Even though they are social cats, they are still independent. These cats continue to use their hunting skills to catch insects or pests that come into the house. 
+        <img class="img-responsive" src="http://placekitten.com/352/250" alt="American Shorthair">
+        To improve the look of the layout, I did the following:<ol>
+        <li>put some space under the links to my Github projects ( Since I didn't want to mess up with the Bootstrap CSS, the neatest way I found was to enclose the "a" element inside a "p" element)</li>
+        <li>round the picture borders</li>
+        <li>put 2 horizontal lines</li>
+        <li>centered the content</li>
+      </ol>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -99,11 +118,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="Snoolie">Norwegian Forest Cat</h4>
+        <h4 class="modal-title" id="Snookie">Norvegian Forest Cat</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="http://placekitten.com/357/250" alt="Snookie">
-         Natural athletes, Norwegian Forest Cats love to investigate counters, bookcases, and the loftiest peaks of their cat trees. Wegies are active and playful and retain their fun-loving spirit well into adulthood, but don't be fooled by the breed's impressive muscles and all-weather exterior. They are sweet, friendly, and family-oriented, and they love their human companions. Despite the wild years in the forests of Norway, or perhaps because of it, they would much rather cuddle than prowl.Because of those harsh survival years (perhaps), nothing fazes them much, either.
+        <img class="img-responsive" src="http://placekitten.com/357/250" alt="Norvegian Forest Cat">
+        In the links to my Gihub Projects there's more code to see (specifically: Project-Part-1-Start), and some comment on it. I tested troughly the code, and I noticed that the hero image doesn't change if I resize the browser. I must reload it to have the correct version. I coun't find the problem, tough.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -111,5 +130,7 @@
     </div>
   </div>
 </div>
-  </body>
+</body>
 </html>
+
+
